fix limit on explain SERVER-1896